--- a/build.xml
+++ b/build.xml
@@ -1,16 +1,18 @@
 <project name="cobertura.examples.basic" default="coverage" basedir=".">
-	<description>
-	Cobertura - http://cobertura.sourceforge.net/ Copyright (C) 2003 jcoverage ltd. Copyright (C) 2005 Mark Doliner <thekingant@users.sourceforge.net> Copyright (C) 2006 Dan Godfrey Cobertura is licensed under the GNU General Public License Cobertura comes with ABSOLUTELY NO WARRANTY
-	</description>
+
 	<property name="dist" value="build"/>
 	<property file="build.properties"/>
+
+	
 	<path id="cobertura.classpath">
 		<fileset dir="${cobertura.dir}">
 		<include name="cobertura*.jar"/>
-		<include name="lib/*.jar"/>
+		<include name="**/*.jar"/>
 		</fileset>
 	</path>
+	
 	<taskdef classpathref="cobertura.classpath" resource="tasks.properties"/>
+	
 	<target name="init">
 		<mkdir dir="${classes.dir}"/>
 		<mkdir dir="${instrumented.dir}"/>
@@ -20,15 +22,18 @@
 		<mkdir dir="${coverage.summaryxml.dir}"/>
 		<mkdir dir="${coverage.html.dir}"/>
 	</target>
+	
 	<target name="compile" depends="init">
 		<javac srcdir="${src.dir}" destdir="${classes.dir}" debug="yes" includeantruntime="false">
-		<classpath refid="cobertura.classpath"/>
+			<classpath refid="cobertura.classpath"/>
 		</javac>
+		
 		<!--  創建放置jar檔目錄  -->
 		<mkdir dir="${dist}/lib"/>
 		<!--  把build目錄內的所有檔案結構打包成jar檔   -->
 		<jar jarfile="${dist}/lib/${ant.project.name}.jar" basedir="bin"/>
 	</target>
+	
 	<target name="instrument" depends="init,compile">
 		<!--
 
@@ -44,93 +49,96 @@
 				
 		-->
 		<cobertura-instrument todir="${instrumented.dir}">
-		<!--
+			<!--
 
 						The following line causes instrument to ignore any
 						source line containing a reference to slf4j/logback, for the
 						purposes of coverage reporting.
 					
-		-->
-		<ignore regex="org.slf4j.*"/>
-		<fileset dir="${classes.dir}">
-		<!--
+			-->
+			<ignore regex="org.slf4j.*"/>
+			<fileset dir="${classes.dir}">
+				<!--
 
 							Instrument all the application classes, but
 							don't instrument the test classes.
 						
-		-->
-		<include name="**/*.class"/>
-		<exclude name="**/*Test.class"/>
-		</fileset>
+				-->
+				<include name="**/*.class"/>
+				<exclude name="**/*Test.class"/>
+			</fileset>
 		</cobertura-instrument>
 	</target>
+	
 	<target name="test" depends="init,compile">
 		<junit fork="yes" dir="${basedir}" failureProperty="test.failed">
-		<!--
+			<!--
 
-						Note the classpath order: instrumented classes are before the
-						original (uninstrumented) classes.  This is important.
-					
-		-->
-		<classpath location="${instrumented.dir}"/>
-		<classpath location="${classes.dir}"/>
-		<!--
+							Note the classpath order: instrumented classes are before the
+							original (uninstrumented) classes.  This is important.
+						
+			-->
+			<classpath location="${instrumented.dir}"/>
+			<classpath location="${classes.dir}"/>
+			<!--
 
-						The instrumented classes reference classes used by the
-						Cobertura runtime, so Cobertura and its dependencies
-						must be on your classpath.
-					
-		-->
-		<classpath refid="cobertura.classpath"/>
-		<formatter type="xml"/>
-		<test name="${testcase}" todir="${reports.xml.dir}" if="testcase"/>
-		<batchtest todir="${reports.xml.dir}" unless="testcase">
-		<fileset dir="${src.dir}">
-		<include name="**/*Test.java"/>
-		</fileset>
-		</batchtest>
+							The instrumented classes reference classes used by the
+							Cobertura runtime, so Cobertura and its dependencies
+							must be on your classpath.
+						
+			-->
+			<classpath refid="cobertura.classpath"/>
+			
+			<formatter type="xml"/>
+			<test name="${testcase}" todir="${reports.xml.dir}" if="testcase"/>
+			<batchtest todir="${reports.xml.dir}" unless="testcase">
+				<fileset dir="${src.dir}">
+					<include name="**/*Test.java"/>
+				</fileset>
+				</batchtest>
 		</junit>
+		
 		<junitreport todir="${reports.xml.dir}">
-		<fileset dir="${reports.xml.dir}">
-		<include name="TEST-*.xml"/>
-		</fileset>
-		<report format="frames" todir="${reports.html.dir}"/>
+			<fileset dir="${reports.xml.dir}">
+				<include name="TEST-*.xml"/>
+			</fileset>
+			<report format="frames" todir="${reports.html.dir}"/>
 		</junitreport>
-		</target>
-		<target name="coverage-check">
+		
+	</target>
+	
+	<target name="coverage-check">
 		<cobertura-check branchrate="34" totallinerate="100"/>
 	</target>
+	
 	<target name="coverage-report">
 		<!--
-
 					Generate an XML file containing the coverage data using
 					the "srcdir" attribute.
-				
 		-->
 		<cobertura-report srcdir="${src.dir}" destdir="${coverage.xml.dir}" format="xml"/>
 	</target>
+	
 	<target name="summary-coverage-report">
 		<!--
-
 					Generate an summary XML file containing the coverage data using
 					the "srcdir" attribute.
-				
 		-->
 		<cobertura-report srcdir="${src.dir}" destdir="${coverage.summaryxml.dir}" format="summaryXml"/>
 	</target>
+	
 	<target name="alternate-coverage-report">
 		<!--
-
 					Generate a series of HTML files containing the coverage
 					data in a user-readable form using nested source filesets.
-				
 		-->
 		<cobertura-report destdir="${coverage.html.dir}">
-		<fileset dir="${src.dir}">
-		<include name="**/*.java"/>
-		</fileset>
+			<fileset dir="${src.dir}">
+				<include name="**/*.java"/>
+			</fileset>
 		</cobertura-report>
 	</target>
+	
 	<target name="jar">
 		<jar destfile="build/lib/course.jar" basedir="classes/unitTest_example">
 		<manifest>
