--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 	<path id="cobertura.classpath">
 		<fileset dir="${cobertura.dir}">
 		<include name="cobertura*.jar"/>
-		<include name="**/*.jar"/>
+		<include name="lib/**/*.jar"/>
 		</fileset>
 	</path>
 	
